# ffmpegandroidvideoplayer

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/jni/: SDL4Android.cpp
app/src/main/jni/Audio/: Audio.cpp  Audio.h  CMakeLists.txt
app/src/main/jni/FrameQueue/: CMakeLists.txt  FrameQueue.cpp  FrameQueue.h
app/src/main/jni/Media/: CMakeLists.txt  Media.cpp  Media.h
app/src/main/jni/PacketQueue/: CMakeLists.txt  PacketQueue.cpp  PacketQueue.h
app/src/main/jni/ReadPacketsThread/: CMakeLists.txt  ReadPacketsThread.cpp  ReadPacketsThread.h
app/src/main/jni/Video/: CMakeLists.txt  Video.cpp  Video.h
app/src/main/jni/ffmpeg/include/libavutil/: common.h
app/src/main/jni/sdl/src/main/android/: SDL_android_main.cpp  org_libsdl_app_SDLActivity.h
app/src/main/res/drawable/: selectfileselector.xml
app/src/main/res/layout/: activity_sdl.xml
app/src/main/res/values/: colors.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
